修改小火箭

--- a/shadowrocket_online/index.html
+++ b/shadowrocket_online/index.html
@@ -6,10 +6,10 @@
 	<meta name="description" content="Shadowrocket" />
 	<meta name="keywords" content="Shadowrocket" />
 	<title>Shadowrocket</title>
-    <link rel="shortcut icon" href="/assets/images/favicon.ico">
-    <link rel="stylesheet" href="/assets/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="/assets/css/style.css" />
-    <link rel="stylesheet" href="/assets/css/my.css" />
+    <link rel="shortcut icon" href="./assets/images/favicon.ico">
+    <link rel="stylesheet" href="./assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/my.css" />
 </head>
 <body>
     <div class="wrap">
@@ -23,7 +23,7 @@
 		        <div style="text-align:center;">
 		  			<div class="polaroid">
                         <div class="logo">
-                            <img src="/assets/images/icon.jpg" class="img-circle" width="120" height="120" />
+                            <img src="./assets/images/icon.jpg" class="img-circle" width="120" height="120" />
                         </div>
                     </div>
 		            <div class="info" id="ul">
@@ -53,7 +53,7 @@
 							 <p><a id="refresh">刷新</a><p>
                       	</div>
 		                <span id="checkinfo">
-		                    <a href="itms-services://?action=download-manifest&url=https://ios.xfgss.com/ipa.plist" class="btn btn-success btn-lg btn-circle" id="uaApp">在线安装</a>
+		                    <a href="itms-services://?action=download-manifest&url=https://ssrscloud.xyz/ssr/shadowrocket_online/ipa.plist" class="btn btn-success btn-lg btn-circle" id="uaApp">在线安装</a>
 		                    <div class="uatip" id="uaTip">
 								<span class="uatip-icon"></span>
 								<p class="uatip-txt">点击右上角<br/>选择在Safari中打开</p>
@@ -77,9 +77,9 @@
              ©&nbsp;2018 <a href="https://9499460.com/" target="blank">博客</a>
         </div>
 	</div>
-<script type="text/javascript" src="/assets/js/jquery-1.7.2.min.js"></script>
-<script type="text/javascript" src="/assets/js/clipboard.min.js"></script>
-<script type="text/javascript" src="/assets/js/my.js"></script>
+<script type="text/javascript" src="./assets/js/jquery-1.7.2.min.js"></script>
+<script type="text/javascript" src="./assets/js/clipboard.min.js"></script>
+<script type="text/javascript" src="./assets/js/my.js"></script>
 <script>
     var username = "xfgssr@gmail.com";
     var password = "Xfgssr2560";
